--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body, html {
 
 @font-face {
     font-family: Vonique;
-    src: url(../assets/fonts/Vonique\ 64\ Bold.ttf);
+    src: url(/assets/fonts/Vonique\ 64\ Bold.ttf);
 }
 
 h1 {
