--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body, html {
     width: 100%;
     height: 400px;
     margin: 0;
-    background-image: url(../assets/images/headerBackground.jpeg);
+    background-image: url(assets/images/headerBackground.jpeg);
     background-repeat: no-repeat;
     background-size: 1500px;
     background-attachment: fixed;
@@ -35,7 +35,7 @@ body, html {
 
 @font-face {
     font-family: Vonique;
-    src: url(/assets/fonts/Vonique\ 64\ Bold.ttf);
+    src: url(assets/fonts/Vonique\ 64\ Bold.ttf);
 }
 
 h1 {
@@ -137,7 +137,7 @@ button {
     gap: 10px;
     height: 160px;
     width: 160px;
-    background-image: url(../assets/images/card.svg);
+    background-image: url(assets/images/card.svg);
     background-repeat: no-repeat;
     background-size: 200px;
     background-position: center;
